<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/word_layout_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/character_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:onClick="onClick"
            android:src="@mipmap/ic_back"/>
        <TextView
            style="@style/titleStyle"
            android:text="@string/character_msg"/>
        <ImageView
            android:id="@+id/character_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_star"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:onClick="onClick"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/character_zi"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text=""
        android:layout_below="@id/word_layout_top"
        android:layout_centerHorizontal="true"
        android:textSize="70sp"
        android:textColor="@color/purple_700"
        android:background="@mipmap/ic_text"
        android:gravity="center"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/character_pinyin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/character_zi"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_margin="10dp"/>
    <LinearLayout
        android:id="@+id/character_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/character_pinyin">
        <TextView
            android:id="@+id/character_bushou"
            style="@style/characterHeadStyle"
            android:text="部首 : " />
        <TextView
            android:id="@+id/character_bihua"
            style="@style/characterHeadStyle"
            android:text="笔画 : " />
        <TextView
            android:id="@+id/character_wubi"
            style="@style/characterHeadStyle"
            android:text="五笔 : " />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/character_tarbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/character_head"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/character_basic"
            style="@style/characterTailStyle"
            android:textColor="@color/white"
            android:background="@color/purple_700"
            android:text="@string/character_basic_msg"/>
        <TextView
            android:id="@+id/character_detailed"
            style="@style/characterTailStyle"
            android:textColor="@color/purple_700"
            android:background="@color/white"
            android:text="@string/character_detailed_msg"/>
    </LinearLayout>

    <ListView
        android:id="@+id/character_tail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/character_tarbar"
        android:background="@color/purple_200"
        android:dividerHeight="2dp" />
</RelativeLayout>